# darkMatterStories

./: .gitignore  pyproject.toml  readme.md
app/: agent.py  db.py  main.py  models.py  settings.py
examples/prompts/: cyberpunk_heist.json  hard_scifi_discovery.json  post_apocalyptic_survival.json  solarpunk_utopia.json  space_opera_war.json
examples/stories/: Chronos Confinement.json  Entropy Reversed.json  The Breath of the Old Core.json
